# email-organizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
config/: account.example.toml  rules.example.toml
email_categorizer/: __main__.py  cli.py  config.py  engine.py  imap_client.py
skills/email-categorizer/: SKILL.md
skills/email-categorizer/agents/: openai.yaml
skills/email-categorizer/references/: configuration.md
skills/email-categorizer/scripts/: run_email_categorizer.sh
tests/: test_config.py  test_engine.py  test_imap_client.py
